public enum TaskStatus {
    OPEN,
    COMPLETED,
    CANCELLED
}